--- a/notebooks/TestGPU.ipynb
+++ b/notebooks/TestGPU.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip3 install --user tensorflow-gpu==1.11.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -38,9 +47,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "\"self2face-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "self2face-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -52,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
