Add notebooks and util

--- a/notebooks/BuildingAndTrainModels.ipynb
+++ b/notebooks/BuildingAndTrainModels.ipynb
@@ -2402,7 +2402,19 @@
       "discrim_loss 0.1283836\n",
       "gen_loss_GAN 5.3642974\n",
       "gen_loss_L1 0.07162893\n",
-      "-------------------------\n"
+      "-------------------------\n",
+      "recording summary\n",
+      "recording summary\n",
+      "saving display images\n",
+      "recording summary\n",
+      "recording summary\n",
+      "saving display images\n",
+      "progress  epoch 68  step 132  datum 695 global_step 27200 image/sec 0.0  remaining 11m\n",
+      "discrim_loss 0.20529957\n",
+      "gen_loss_GAN 5.8231783\n",
+      "gen_loss_L1 0.07784873\n",
+      "-------------------------\n",
+      "recording summary\n"
      ]
     }
    ],
