--- a/notebooks/ExportModel.ipynb
+++ b/notebooks/ExportModel.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +46,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "run_cells(\"./BuildingAndTrainModels.ipynb\", \n",
-    "          cell_tag=[\"parameters\",\"conv\",\"gen\",\"disc\",\"model\",\"util\",\"process\"])"
+    "          cell_tags=[\"parameters\",\"conv\",\"gen\",\"disc\",\"model\",\"util\",\"process\"])"
    ]
   },
   {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,16 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading model from checkpoint\n",
-      "INFO:tensorflow:Restoring parameters from ./models/face2face-model/export\n",
-      "exporting model\n"
+      "Loading model from checkpoint ...\n",
+      "INFO:tensorflow:Restoring parameters from ./models/face2face-model/model-32000\n",
+      "Exporting model ...\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
     "export_saver = tf.train.Saver()\n",
     "\n",
     "input_checkpoint_dir = \"./models/face2face-model/\"\n",
-    "output_model_dir = \"./models/self2face-reduced-model/\"\n",
+    "output_model_dir = \"./models/face2face-reduced-model/\"\n",
     "\n",
     "with tf.Session() as sess:\n",
     "\n",
