Add download local functionality and minio upload functionality

--- a/notebooks/FaceDetection/PrepareFDDBDataset.ipynb
+++ b/notebooks/FaceDetection/PrepareFDDBDataset.ipynb
@@ -71,8 +71,10 @@
     "import os\n",
     "import re\n",
     "import io\n",
+    "import json\n",
     "import glob\n",
     "import enum\n",
+    "import errno\n",
     "import tarfile\n",
     "from pathlib import Path\n",
     "\n",
@@ -199,6 +201,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_file_to_filepath(fileobj, filepath):\n",
+    "    if not os.path.exists(os.path.dirname(filepath)):\n",
+    "        try:\n",
+    "            os.makedirs(os.path.dirname(filepath))\n",
+    "        except OSError as exc: # Guard against race condition\n",
+    "            if exc.errno != errno.EEXIST:\n",
+    "                raise\n",
+    "\n",
+    "    with open(filepath, \"wb\") as f:\n",
+    "        f.write(fileobj.read())\n",
+    "        \n",
+    "    return filepath"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -207,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,15 +262,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class FDDB_Dataset(tfds.core.GeneratorBasedBuilder):\n",
-    "    \"\"\"Short description of my dataset.\"\"\"\n",
+    "class FDDBDataset(tfds.core.GeneratorBasedBuilder):\n",
+    "    \"\"\"FDDB dataset\"\"\"\n",
     "    \n",
     "    class FDDB_Parse_State(enum.Enum):\n",
-    "        '''States of fddb dataset annotations'''\n",
+    "        '''States of fddb dataset parsing'''\n",
     "        FILEPATH = 1\n",
     "        NUMFACES = 2\n",
     "        FACELOCATION = 3\n",
@@ -262,9 +284,13 @@
     "\n",
     "    VERSION = tfds.core.Version('0.0.0')\n",
     "    \n",
-    "    def __init__(self, download_local, *args, **kwargs):\n",
-    "        super(FDDB_Dataset, self).__init__(*args, *kwargs)\n",
+    "    def __init__(self, download_local, download_local_root=\"\", *args, **kwargs):\n",
+    "        super(FDDBDataset, self).__init__(*args, *kwargs)\n",
     "        self.download_local = download_local\n",
+    "        \n",
+    "        if download_local: assert not download_local_root, \"Must provide download_local_root path\"\n",
+    "        self.download_local_root = download_local_root\n",
+    "        \n",
     "        self.minio_client = self.make_minio_client()\n",
     "        self.data_count = 0\n",
     "\n",
@@ -348,27 +374,41 @@
     "            \n",
     "    def extract_and_upload(self):\n",
     "\n",
+    "        ## Download paths of images and annotations\n",
     "        images_tarfile_path = search_download_path(self.FDDB_DOWNLOAD_URLS[\"images\"])\n",
     "        images_tarfile = tarfile.open(images_tarfile_path)\n",
     "        annotations_tarfile_path = search_download_path(self.FDDB_DOWNLOAD_URLS[\"annotations\"])\n",
     "        annotations_tarfile = tarfile.open(annotations_tarfile_path)\n",
-    "        \n",
+    "\n",
+    "        ## Iterate through 'ellipse' files extracting facial annotations\n",
     "        for annotation_file in filter(lambda tfn:\"ellipse\" in tfn.name, annotations_tarfile):\n",
     "            for fddb_json_annotations in self.generate_fddb_json_annotations(annotations_tarfile.extractfile(annotation_file), images_tarfile):\n",
+    "                \n",
+    "                image_fileobj = get_file_from_tar(fddb_json_annotations[\"file\"], images_tarfile_path)\n",
+    "                image_filepath = fddb_json_annotations[\"file\"]\n",
+    "                annotation_fileobj = io.BytesIO(json.dumps(fddb_json_annotations).encode())\n",
+    "                annotation_filepath = str(Path(fddb_json_annotations[\"file\"]).with_suffix(\".json\"))\n",
+    "                \n",
     "                if not self.download_local:\n",
     "                    image_response = self.upload_file_to_minio(bucket_name = self.FDDB_BUCKET_NAME, \n",
-    "                                                               objname = fddb_json_annotations[\"file\"],\n",
-    "                                                               fileobj = get_file_from_tar(fddb_json_annotations[\"file\"], images_tarfile_path),\n",
-    "                                                               size = images_tarfile.getmember(fddb_json_annotations[\"file\"]).size)\n",
+    "                                                               objname = image_filepath,\n",
+    "                                                               fileobj = image_fileobj,\n",
+    "                                                               size = images_tarfile.getmember(image_filepath).size)\n",
     "                    annotation_response = self.upload_file_to_minio(bucket_name = self.FDDB_BUCKET_NAME, \n",
-    "                                                                    objname = str(Path(fddb_json_annotations[\"file\"]).with_suffix(\".json\")),\n",
-    "                                                                    fileobj = io.BytesIO(str(fddb_json_annotations).encode()),\n",
+    "                                                                    objname = annotation_filepath,\n",
+    "                                                                    fileobj = annotation_fileobj,\n",
     "                                                                    size = len(str(fddb_json_annotations).encode()))\n",
-    "                    print(image_response, annotation_response)\n",
-    "                    self.data_count += 1\n",
     "                    \n",
     "                else:\n",
-    "                    pass"
+    "                    image_response = write_file_to_filepath(fileobj = image_fileobj,\n",
+    "                                                            filepath = os.path.join(self.download_local_root, self.FDDB_BUCKET_NAME, image_filepath))\n",
+    "\n",
+    "                    annotation_response = write_file_to_filepath(fileobj = annotation_fileobj,\n",
+    "                                                                 filepath = os.path.join(self.download_local_root, self.FDDB_BUCKET_NAME, annotation_filepath))\n",
+    "                    \n",
+    "                    \n",
+    "                print(image_response, annotation_response)\n",
+    "                self.data_count += 1\n"
    ]
   },
   {
@@ -380,13 +420,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mDownloading and preparing dataset fddb__dataset (?? GiB) to /home/jovyan/tensorflow_datasets/fddb__dataset/0.0.0...\u001b[0m\n"
+      "\u001b[1mDownloading and preparing dataset fddb_dataset (?? GiB) to /home/jovyan/tensorflow_datasets/fddb_dataset/0.0.0...\u001b[0m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01f3052459d44ad5b36a36176514b39a",
+       "model_id": "c0a65554b86d4fcf94769cfe124a1a10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -400,7 +440,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed109a9a17884effab784746c66502b1",
+       "model_id": "909ca814c91a44f6bef087b4b5af9ef9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -410,22 +450,10 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "196c82b1ee5668c7efdba5d669084bd5 2b9838bb8d6e666060820061439c5033\n",
-      "d5a60ea3268460489582852dced0033c 0b08cc4fe8dacf26d246bb95ea06f1a0\n",
-      "4399258a4b58526e58c1f36bc7e08034 7f41ab7a76b21869ba89dc2dc1c2b99a\n",
-      "79bfff0cad523e69b952de4328045178 bcc722aca15d7f50e589afc64c50bb6a\n",
-      "d60f086245b23dcbde85cfdea29eeb00 8659c42484a3bd1d849a7c53a2864df1\n"
-     ]
     }
    ],
    "source": [
-    "my_builder = tfds.builder(convert(FDDB_Dataset.__name__), download_local=False)\n",
+    "my_builder = tfds.builder(convert(FDDBDataset.__name__), download_local=True)\n",
     "my_builder.download_and_prepare(\n",
     "    download_dir=os.path.join(os.getcwd(),\"data/\"))"
    ]
@@ -439,7 +467,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,25 +493,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['2002/07/19/big/img_423.jpg',\n",
+       " '2002/07/19/big/img_423.json',\n",
        " '2002/07/19/big/img_581.jpg',\n",
+       " '2002/07/19/big/img_581.json',\n",
        " '2002/07/23/big/img_474.jpg',\n",
        " '2002/07/24/big/img_402.jpg',\n",
+       " '2002/07/24/big/img_402.json',\n",
        " '2002/07/24/big/img_518.jpg',\n",
        " '2002/07/27/big/img_970.jpg',\n",
-       " '2002/07/31/big/img_228.jpg',\n",
-       " '2002/08/04/big/img_769.jpg',\n",
-       " '2002/08/07/big/img_1316.jpg',\n",
-       " '2002/08/11/big/img_591.jpg']"
+       " '2002/07/31/big/img_228.jpg']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
